<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context="qrcode.compare.activity.HomeActivity">

    <Button
        android:id="@+id/scanner1_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scanner1"
        android:textAllCaps="false"
        android:background="@color/colorPrimary"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/scanner2_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scanner2"
        android:textAllCaps="false"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/scanner3_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scanner3"
        android:textAllCaps="false"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/scanner4_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scanner4"
        android:textAllCaps="false"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/scanner5_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scanner5"
        android:textAllCaps="false"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white" />


</LinearLayout>
